--- a/test.ipynb
+++ b/test.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "b'$q\\xd3~\\xb8I_\\x86\\x14\\x90\\xebu\\xf8\\xc3e$\\x8b\\xd5\\x12\\xe6\\x14u\\xf4z'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
@@ -40,6 +29,16 @@
     "    print(True)\n",
     "else:\n",
     "    print(False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = []\n",
+    "test = test.append(1)"
    ]
   }
  ],
